tests/snapshots/examples_fixtures/aoc__2025__aoc_day2_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day2_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/aoc/2025/aoc_day2_haskell_style.flx:43:9
   |
43 |         read_file(path)
   |         ^^^^^^^^^^^^^^^
44 |         |> trim
   | ^^^^^^^^^^^^^^^
45 |         |> split(",")
   | ^^^^^^^^^^^^^^^^^^^^^
46 |         |> filter(/t -> trim(t) != "")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Note:
  expected parameter type: List<_>
  found parameter type: Array<String>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.


error[E004]: Undefined Variable

I can't find a value named `has_key`.

  examples/aoc/2025/aoc_day2_haskell_style.flx:64:16
   |
64 |             if has_key(seen, candidate) {
   |                ^^^^^^^

Hint:
  Define it first: let has_key = ...;

Found 2 errors.
== stdout ==
<not executed>
